# internal/domain/user/entity.go
@@ -1,0 +1,12 @@
+package user
+
+import "time"
+
+type User struct {
+	ID        int64
+	Email     string
+	Password  string // hashed
+	FullName  string
+	CreatedAt time.Time
+	UpdatedAt time.Time
+}
